themes/tme/assets/scss/_post.scss
.post {
  background: $post-background-color;
  margin: 1.5em auto;
  padding: $post-content-padding;
  max-width: 55em;
  box-shadow: 0px 3px 10px 0px #33333330;
  border-radius: 3px;

  header {
    display: grid;
    grid-template-areas:
      "title"
      "desc"
      "meta";
    grid-template-columns: 1fr;
    grid-template-rows: 1fr auto auto;
    margin-bottom: 1em;
    border-bottom: solid 1px $separator-color;

    .title {
      grid-area: title;
      margin-bottom: 1em;

      h2, h4 {
        margin-bottom: 0;
      }

      h4 {
        font-size: 1.2em;
        font-weight: bold;
      }
    }
    .meta {
      grid-area: meta;
      // padding-top: 0.5em;
      font-size: 0.8em;

      .icon {
        // font-size: 0.8em;
      }
    }
    .desc {
      grid-area: desc;
      font-style: italic;
      // padding-bottom: 1em;
    }

    @include for-tablet-up {
      grid-template-areas:
      "title meta"
      "desc none";
      grid-template-columns: 1fr 10em;
      grid-template-rows: 1fr auto;

      .meta {
        text-align: right;
      }
    }

  }

  .content {
    iframe {
      margin: 0 auto;
    }
  }
}

.list-info {
  margin: 2em auto;
  padding: 1em;
  border-bottom: solid 1px $separator-color;
}

.list-post {
  @extend .post;

  footer {
    a, a:visited {
      display: block;
      text-align: center;
      border: solid 1px $link-color;
      padding: 0.5em;
      text-transform: uppercase;
      color: $link-color;
      font-weight: bold;
      transition: all linear 100ms;
    }
    a:hover {
      text-decoration: none;
      background: $link-color;
      color: #fff;
    }
  }
}

/* CSS triangle to give intro text a "speech bubble" effect */
$triangle-size: 20px;
.intro {
  position: relative;
  padding: 2*$post-content-padding;
  border-radius: 3px;
  border-top-right-radius: $post-content-padding;
  border-bottom-left-radius: $post-content-padding;

  .lead {
    font-size: 1.2em;
  }

  p:last-of-type {
    margin-bottom: 0;
  }

  &:before {
    content: "";
    position: absolute;
    top: -2 * $triangle-size;
    left: 2*$post-content-padding;
    display: block;
    width: 0;
    height: 0;
    background: transparent;
    border: solid $triangle-size transparent;
    border-bottom-color: $post-background-color;
  }

  @include for-desktop-up {
    max-width: 40em;
    margin-left: 2em;

    &:before {
      top: 2*$post-content-padding;
      left: -2 * $triangle-size;
      border-bottom-color: transparent;
      border-right-color: $post-background-color;
    }
  }
}

.recent-posts {
  max-width: 55em;
  margin: 5em auto 0;

  @include for-tablet-up {
    .recent-posts-cont {
      max-width: 100%;
      display: grid;
      grid-template-areas:
        "a a a"
        "b c d";
      grid-template-rows: auto auto;
      grid-template-columns: 1fr 1fr 1fr;
      row-gap: 0em;
      column-gap: 1em;

      .list-post-1 {
        grid-area: a;
      }
      .list-post-2 {
        grid-area: b;
      }
      .list-post-3 {
        grid-area: c;
      }
      .list-post-4 {
        grid-area: d;
      }
    }
  }
}

.list-post-intro {
  @extend .list-post;

  header {
    // display: block;
    grid-template-areas:
      "title"
      "desc"
      "meta";
    grid-template-rows: auto auto auto;
    grid-template-columns: 1fr;

    h2 {
      font-size: 1.25em;
    }
    .desc {
      margin-bottom: 0.5em;
      font-size: 1em;
    }
    .meta {
      margin-bottom: 1em;
      font-size: 0.65em;
      text-align: left;
    }
  }
  .content {
    font-size: 0.8em;
  }

  &:first-of-type {
    header {
      @include for-tablet-up {
        grid-template-areas:
          "title title"
          "desc meta";
          grid-template-rows: auto auto;
          grid-template-columns: auto auto;
      }
      h2 {
        font-size: 1.4em;
      }
      .meta {
        text-align: right;
      }
    }
    .content {
      font-size: 1em;
    }
  }
}



/******************* IMAGES */
.gallery p {
  display: flex;
  flex-direction: row;
  justify-content: center;

  img {
    height: 30em;
    margin: 0.5em;
    box-shadow: 0px 3px 10px 0px #33333330;
    transition: transform linear 200ms;

    &:hover {
      transform: scale(1.01);
    }
  }
}

